--- a/qm/2/22.html
+++ b/qm/2/22.html
@@ -99,7 +99,10 @@ Then a strategy for attacking it is to recognize that we can "factor" the expone
     $$\Rightarrow \ \sqrt{ \frac{2a}{\pi} } \ \frac{ e^{-\frac{ax^2}{1 \ - \ 2ai\hbar t/m} \ - \ \frac{ax^2}{1 \ + \ 2ai\hbar t/m} } }{\sqrt{(2ai\hbar t/m \ + \ 1)(1 \ - \ 2ai\hbar t/m)}} \ = \
     w \ \sqrt{ \frac{2}{\pi} } \ e^{-\frac{2ax^2}{1 \ + \ (2\hbar a t/m)^2}} \ = \ w \ \sqrt{ \frac{2}{\pi} } \ e^{-2ax^2w^2}$$
     <br><br>
-    
+  Next, let us find all of the desired values, $\langle x \rangle$, $\langle p \rangle$, $\langle x^2 \rangle, \langle p^2 \rangle$:
+  <br>
+  $$\langle x \rangle \ = \ w \ \sqrt{ \frac{2}{\pi} } \ \displaystyle\int_{-\infty}^{\infty} \ xe^{-2aw^2 x^2} \ = \ \ w \ \sqrt{ \frac{2}{\pi} } \ \Big(-\frac{e^{-2aw^2 x^2}}{4aw^2}\Big) \biggr\rvert_{-\infty}^{\infty} \ = \ 0$$
+  $$\langle p \rangle \ = \ w \ \sqrt{ \frac{2}{\pi} } \ \displaystyle\int_{-\infty}^{\infty} \ xe^{-2aw^2 x^2}$$
    <br><br><br><br>
 </div>
 </center>
