--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
               content that I have written about technical math/physics topics can be found <a href="https://github.com/Lucaman99/Math-and-Physics/blob/master/README.md">here</a>.</li>
         </ul>
       </li>
+      <br>
+      <li><b>Other Stuff</b>
+        <ul>
+          <li>Some notes on tensor analysis and fluid dynamics can be found <a href="https://lucaman99.github.io/physics/vutha_meeting">here</a>.</li>
+          <br>
+          <li>My blog, where I write about math/physics/coding, as well as a bunch of other stuff (This project will be kicked-off starting in summer 2019) can be found <a href="https://lucaman99.github.io/physics/blog">here</a></li>
+        </ul>
+      </li>
     </ul>
     <br><br><br><br>
 </div>
