--- a/index.html
+++ b/index.html
@@ -87,4 +87,9 @@
 </div>
 </center>
 </body>
+  <style>
+    body {
+      font-family:"Lucida Console", Monaco, monospace
+    }
+  </style>
 </html>
