--- a/index.html
+++ b/index.html
@@ -91,5 +91,11 @@
     body {
       font-family:"Lucida Console", Monaco, monospace
     }
+    ul {
+      font-size:13px;
+    }
+    p {
+      font-size:13px;
+    }
   </style>
 </html>
