--- a/qm/index.html
+++ b/qm/index.html
@@ -19,7 +19,7 @@
 <p>This is the first time I have ever attempted to make a formal physics solution set, so for my <b>Chapter 1</b> solutions, I checked some of them against the solutions at <a href="https://physicspages.com/Griffiths%20QM.html">this link</a>. Despite this, all solutions written here were personally constructed, I only used this website to make sure that my solutions were not incorrect.</p>
 <p>Chapter 1: <a href="https://lucaman99.github.io/qm/1/4.html">Problem 1.4</a>, <a href="https://lucaman99.github.io/qm/1/7.html">Problem 1.7</a>, <a href="https://lucaman99.github.io/qm/1/11.html">Problem 1.11</a>, <a href="https://lucaman99.github.io/qm/1/14.html">Problem 1.14</a>, <a href="https://lucaman99.github.io/qm/1/15.html">Problem 1.15</a>, <a href="https://lucaman99.github.io/qm/1/16.html">Problem 1.16</a></p>
 <p>Chapter 2: <a href="https://lucaman99.github.io/qm/2/14.html">Problem 2.14</a>, <a href="https://lucaman99.github.io/qm/2/22.html">Problem 2.22</a>, <a href="https://lucaman99.github.io/qm/2/29.html">Problem 2.29</a>, <a href="https://lucaman99.github.io/qm/2/40.html">Problem 2.40</a></p>
-<p>Chapter 3: <a href="https://lucaman99.github.io/qm/3/13.html">Problem 3.13</a>, <a href="https://lucaman99.github.io/qm/3/14.html">Problem 3.14</a></p>
+<p>Chapter 3: <a href="https://lucaman99.github.io/qm/3/13.html">Problem 3.13</a>, <a href="https://lucaman99.github.io/qm/3/14.html">Problem 3.14</a>, <a href="https://lucaman99.github.io/qm/3/15.html">Problem 3.15</a></p>
 </div>
 </center>
 </body>
