--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <br>
             <li>I'm currently writing a formal solution manual to selected problems in Griffiths Introduction to Quantum Mechanics Textbook! You can check that out at this <a href="https://lucaman99.github.io/qm/">link</a>.
               In addition, I have written up a bunch of solutions to problem in Munkres' Topology textbook, but I haven't typed all of them up yet. Hopefully that will be done soon and the website
-              link will be posted here. UPDATE: It has arrived, enjoy! <a href="https://lucaman99.github.io/qm/">Munkres Topology</a></li>
+              link will be posted here. UPDATE: It has arrived, enjoy! <a href="https://lucaman99.github.io/munkres/">Munkres Topology</a></li>
                 <br>
             <li>I've also written a bunch of other assorted notes/problem set solutions, etc. about other topics in physics and math. A complete set of all of the
               content that I have written about technical math/physics topics can be found <a href="https://github.com/Lucaman99/Math-and-Physics/blob/master/README.md">here</a>.</li>
