--- a/munkres/index.html
+++ b/munkres/index.html
@@ -16,6 +16,8 @@
     <br><br>
 <h2>Munkres Introduction to Topology: Solution Manual</h2>
 <h3>Solution Directory (Incomplete)</h3>
+<p>Assorted Proofs to Random Propositions in Munkres: <a href="https://lucaman99.github.io/munkres/other_proofs.html">Here</a></p>
+    <br>
 <p>Section 17: <a href="https://lucaman99.github.io/munkres/17/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/17/2.html">Problem 2</a>, <a href="https://lucaman99.github.io/munkres/17/4.html">Problem 4</a></p>
 </div>
 </center>
