--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
        are where true artistry and creative thought lie. I also like to use these fields to solve large, important problems in the world. I am always
         looking for new projects that involve my interests, so please feel free to reach out!</p>
     <br>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a></p>
+    <br>
     <h3>Current Projects</h3>
     <ul>
       <li><b>Quantum Computational Algorithm Simulations</b></li>
@@ -41,6 +43,10 @@
         <br>
         <li>
           Simulating the QAOA MaxCut Algorithm and VQE for Ising Hamiltonians with Cirq: <a href="https://mathacademy.quora.com/An-Implementation-of-QAOA">blog post</a>
+        </li>
+        <br>
+        <li>
+          Topological Quantum Comupting Simulation Work (I'm trying!!!!!): <a href="https://github.com/Lucaman99/Cirq-Quantum-Computing/tree/master/topological">Github repo</a>
         </li>
       </ul>
       <br>
