--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         For the past several months, along with a friend, I have been working on a mathematical and physical model, a cellular automata simulation, and a data-gathering
             robot that can help to predict how forest fires will spread within a forest. The robot can also detect fires, and send back coordinates of the flame in real time. A link to an article published
             on the Tech Under 20 website about this project can be found <a href="https://techundertwenty.com/building-a-wildfire-sim-robot/">here</a>.
-        <br>
-        I wrote a paper(-ish) on some of our results concerning clustered forest grid configurations. Check it out, I would REALLY APPRECIATE any feedback!!!! <a href="https://drive.google.com/file/d/1Q1auYICbICXWG1NFpQzeKT1_ae1eBO50/view?usp=sharing">Clustered Variations of Cellular-Automata Forest Fire Simulations</a>
+        <br><br>
+        I wrote a paper(-ish) on some of our results concerning clustered forest grid configurations!!! Check it out, I would REALLY APPRECIATE any feedback!!!! <a href="https://drive.google.com/file/d/1Q1auYICbICXWG1NFpQzeKT1_ae1eBO50/view?usp=sharing">Clustered Variations of Cellular-Automata Forest Fire Simulations</a>
       </ul>
       <br>
       <li><b>Math, Physics and Quantum Computing Writing</b>
