--- a/qm/index.html
+++ b/qm/index.html
@@ -22,6 +22,6 @@
 <p>Chapter 3: <a href="https://lucaman99.github.io/qm/3/11.html">Problem 3.11</a>, <a href="https://lucaman99.github.io/qm/3/13.html">Problem 3.13</a>, <a href="https://lucaman99.github.io/qm/3/14.html">Problem 3.14</a>, <a href="https://lucaman99.github.io/qm/3/15.html">Problem 3.15</a>, <a href="https://lucaman99.github.io/qm/3/16.html">Problem 3.16</a></p>
 </div>
 </center>
-<img src="yes.png" style="height:400px;width:400px;right:-1px;position:fixed;bottom:0px;">
+<img src="coherent.png" style="height:400px;width:400px;right:-1px;position:fixed;bottom:0px;">
 </body>
 </html>
