--- a/qm/3/33.html
+++ b/qm/3/33.html
@@ -138,7 +138,7 @@
        $$H_{n} \ = \ \Big(n \ + \ \frac{1}{2} \Big) \hbar \omega$$
        <br>
        Which is exactly what is expected for the Hamiltonian for the quantum harmonic oscillator (since the diagonal is composed of the allowed energies), and each of the
-       different time-independent solutions of the harmonic oscillator are orthonormal state vectors in $\mathbb^{\omega}$.
+       different time-independent solutions of the harmonic oscillator are orthonormal state vectors in $\mathbb{R}^{\omega}$.
   <br><br><br><br>
 </p>
 
