--- a/qm/index.html
+++ b/qm/index.html
@@ -23,5 +23,10 @@
 </div>
 </center>
 <img src="coherent.png" style="height:400px;width:400px;right:-1px;position:fixed;bottom:0px;">
+<div style="left:0px;position:fixed;bottom:0px;width:300px;">
+  <p style="position:relative;padding-left:10px;">"You guessed it, every proof on this website is trivial" he said, trying to send sarcasm through the Internet.</p>
+<img src="funny_meme.png" style="height:300px;width:300px;">
+<img src="ho.png" style="height:250px;width:350px;position:fixed;left:0px;top:0px;">
+</div>
 </body>
 </html>
