--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        are where true artistry and creative thought lie. I also like to use these fields to solve large, important problems in the world. I am always
         looking for new projects that involve my interests, so please feel free to reach out!</p>
     <br>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a></p>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a> | <a href="https://lucaman99.github.io/blog">Blog</a></p>
     <br>
     <h3>Current Projects</h3>
     <ul>
