--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@
     <h2>Jack Ceroni - Personal Website</h2>
     <br>
     <h3>About Me</h3>
-    <p>I am a high school student from the Greater Toronto Area with a great interest in mathematics, physics, and quantum computing.
-      I love working on projects that leverage the beauty and abstraction within pure mathematics, and physics, as I believe that these diciplines
-       are where true artistry and creative thought lie. I also like to use these fields to solve large, important problems in the world. I am always
-        looking for new projects that involve my interests, so please feel free to reach out!</p>
+    <p>Hello there! My name is Jack, and I'm a high school student from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
+    In my free time, I like to:</p>
+    <ul>
+    <li>Entangle qubits</li>
+    <li>Build a robot army (my ranks currently have two soldiers, both of which fall apart if left running for over 5 minutes)</li>
+    <li>"Prove" "theorems"</li>
+    <li>Solve hopelessly long integrals to find expectation values</li>
+    <li>Set digital trees on fire with my homemade computer simulations</li>
+</ul>
+  <p>If you share any of these interests, please feel free to reach out! I'm always looking for new <s>partners in crime</s> academic colleagues!</p>
     <br>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a> | <a href="https://lucaman99.github.io/blog">Blog</a></p>
-    <br>
+    <h4>I sometimes write stuff online!</h4>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a> | <a href="https://lucaman99.github.io/blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a></p>
+    <p>Send me an email! <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
+    <br><br><br>
     <h3>Current Projects</h3>
     <ul>
       <li><b>Quantum Computational Algorithm Simulations</b></li>
@@ -58,17 +66,15 @@
           Topological Quantum Comupting Simulation Work (I'm trying!!!!!): <a href="https://github.com/Lucaman99/Cirq-Quantum-Computing/tree/master/topological">Github repo</a>
         </li>
       </ul>
-      <br>
+      <br><br>
       <li><b>Forest Fire Modelling</b></li>
       <br>
       <ul>
-        For the past several months, along with a friend, I have been working on a mathematical and physical model, a cellular automata simulation, and a data-gathering
-            robot that can help to predict how forest fires will spread within a forest. The robot can also detect fires, and send back coordinates of the flame in real time. A link to an article published
-            on the Tech Under 20 website about this project can be found <a href="https://techundertwenty.com/building-a-wildfire-sim-robot/">here</a>.
-        <br><br>
-        I wrote a paper(-ish) on some of our results concerning clustered forest grid configurations!!! Check it out, I would REALLY APPRECIATE any feedback!!!! <a href="https://drive.google.com/file/d/1Q1auYICbICXWG1NFpQzeKT1_ae1eBO50/view?usp=sharing">Clustered Variations of Cellular-Automata Forest Fire Simulations</a>
+        <li>I'm currently working on using math, physics, software and hardware to better model and prevent forest fire! Check out a brief overview of this project <a href="https://techundertwenty.com/building-a-wildfire-sim-robot/">here</a></li>
+        <br>
+        <li>Speaking of which, I wrote a paper(-ish) on some of our results concerning clustered forest grid configurations!!! Check it out, I would REALLY APPRECIATE any feedback!!!! <a href="https://drive.google.com/file/d/1Q1auYICbICXWG1NFpQzeKT1_ae1eBO50/view?usp=sharing">Clustered Variations of Cellular-Automata Forest Fire Simulations</a></li>
       </ul>
-      <br>
+      <br><br>
       <li><b>Math, Physics and Quantum Computing Writing</b>
         <ul>
           <br>
@@ -76,30 +82,20 @@
             Here is a link to my <a href="https://www.quora.com/profile/Jack-Ceroni">profile</a> and in addition,
           here is a link to my math/physics <a href="https://mathacademy.quora.com/">blog</a> (which is hosted on Quora).</li>
           <br>
-          <li>I also create and write solutions to problems on the website Brilliant.org. This past Christmas, I posted the 12 Days of Math-mas,
-            which was a recreational mathematics problem set. Here is a link to my <a href="https://brilliant.org/profile/jack-tj20jb/">profile</a>.</li>
+          <li>I also write problems/solutions to problems on Brilliant.org. Here is a link to my <a href="https://brilliant.org/profile/jack-tj20jb/">profile</a>.</li>
             <br>
-            <li>In addition to Quora, I write about quantum computing and other cool technology on the website, Medium. My profile can be found
+            <li>In addition to Quora, I write about quantum computing and other cool technology on Medium. My profile can be found
               at this <a href="https://medium.com/@jackceroni">link<a/>.</li>
             <br>
-            <li>I'm currently writing a formal solution manual to selected problems in Griffiths Introduction to Quantum Mechanics Textbook! You can check that out at this <a href="https://lucaman99.github.io/qm/">link</a>.
-              In addition, I have written up a bunch of solutions to problem in Munkres' Topology textbook, but I haven't typed all of them up yet. Hopefully that will be done soon and the website
-              link will be posted here. UPDATE: It has arrived, enjoy! <a href="https://lucaman99.github.io/munkres/">Munkres Topology</a></li>
-                <br>
-            <li>I've also written a bunch of other assorted notes/problem set solutions, etc. about other topics in physics and math. A complete set of all of the
-              content that I have written about technical math/physics topics can be found <a href="https://github.com/Lucaman99/Math-and-Physics/blob/master/README.md">here</a>.</li>
+            <li>One of my larger, current projects is solving and writing up formal solutions to a large chunk of the problems in David Griffiths Intro to Quantum Mechanics. You can find those at this <a href="https://lucaman99.github.io/qm/">link</a>!</li>
+            <br>
+            <li>After I did this, I realized that a couldn't just neglect my PURE math, so I'm doing the exact same thing for <a href="https://lucaman99.github.io/munkres/">Munkres' Introduction to Topology</a></li>
+              <br>
+            <li>I've also written a bunch of other assorted notes/problem set solutions, etc. about other topics in physics and math. A semi-complete set of all this
+              content can be found <a href="https://github.com/Lucaman99/Math-and-Physics/blob/master/README.md">here</a>.</li>
         </ul>
       </li>
       <br>
-      <li><b>Other Stuff</b>
-        <br>
-        <ul>
-          <br>
-          <li>Some notes on tensor analysis and fluid dynamics can be found <a href="https://lucaman99.github.io/physics/vutha_meeting">here</a>.</li>
-          <br>
-          <li>My blog, where I write about math/physics/coding, as well as a bunch of other stuff (This project will be kicked-off starting in summer 2019) can be found <a href="https://lucaman99.github.io/physics/blog">here</a></li>
-        </ul>
-      </li>
     </ul>
     <br><br><br><br>
 </div>
