--- a/munkres/index.html
+++ b/munkres/index.html
@@ -20,7 +20,9 @@
 <p>Section 17: <a href="https://lucaman99.github.io/munkres/17/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/17/2.html">Problem 2</a>, <a href="https://lucaman99.github.io/munkres/17/4.html">Problem 4</a></p>
     <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
     <p>Section 19: <a href="https://lucaman99.github.io/munkres/19/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/19/2.html">Problem 2</a></p>
-</div>
+<br><br><br>
+    What I listen to while doing topology (to stop myself from smashing my computer and pulling out my hair): <a href="https://www.youtube.com/watch?v=skrdyoabmgA">We Shall Never Surrender!</a>
+    </div>
 </center>
 </body>
 </html>
