--- a/munkres/index.html
+++ b/munkres/index.html
@@ -21,7 +21,8 @@
     <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
     <p>Section 19: <a href="https://lucaman99.github.io/munkres/19/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/19/2.html">Problem 2</a></p>
 <br><br><br>
-    What I listen to while doing topology (to stop myself from smashing my computer and pulling out my hair): <a href="https://www.youtube.com/watch?v=skrdyoabmgA">We Shall Never Surrender!</a>
+    Motivation if topology has got you down: <a href="https://www.youtube.com/watch?v=skrdyoabmgA">We Shall Never Surrender!</a>
+    <img src="cackle.png" style="width:400;height:300;position:absolute;left:0px;bottom:0px;"
     </div>
 </center>
 </body>
