--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>Hello there! My name is Jack, and I'm a high school student from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
     In my free time, I like to:</p>
     <ul>
-    <li>Entangle qubits</li>
+    <li>Entangle qubits (fake ones, I don't have enough money to buy the real thing...)</li>
     <li>Build a robot army (my ranks currently have two soldiers, both of which fall apart if left running for over 5 minutes)</li>
     <li>"Prove" "theorems"</li>
     <li>Solve hopelessly long integrals to find expectation values</li>
