--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
       </li>
       <br>
     </ul>
-    <br><br><br><br>
+    <br><br><br>
+    <h3>Media</h3>
+    <ul>
+      <li><a href="https://globalnews.ca/video/5432964/young-innovators-recognized-by-ontario-science-centre">Global News Interview for Weston Youth Innovation Award</a></li>
+    </ul>
+      <br><br><br><br>
 </div>
 </center>
 </body>
