--- a/munkres/20/9.html
+++ b/munkres/20/9.html
@@ -101,7 +101,7 @@ $$\textbf{x} \ \cdot \ (\textbf{y} \ + \ \textbf{z}) \ = \ \displaystyle\prod_{i
  <br><br>
  $$d(\textbf{x}, \ \textbf{y}) \ + \ d(\textbf{y} , \ \textbf{z}) \ \geq \ d(\textbf{x}, \ \textbf{z}) \ \Rightarrow \ ||\textbf{x} \ - \ \textbf{y}|| \ + \ ||\textbf{y} \ - \ \textbf{z}|| \ \geq \ ||\textbf{x} \ - \ \textbf{z}||$$
  <br>
- I take it back, this proof is <b>almost</b> trivial. First, it is fairly evident that if $\textbf{x}, \ \textbf{y}, \ textbf{z}$ are tuples in $\mathbb{R}^n$, then sums and differences of these tuples will also be tuples in $\mathbb{R}^n$. This means that by the previous proof, we consider:
+ I take it back, this proof is <b>almost</b> trivial. First, it is fairly evident that if $\textbf{x}, \ \textbf{y}, \ \textbf{z}$ are tuples in $\mathbb{R}^n$, then sums and differences of these tuples will also be tuples in $\mathbb{R}^n$. This means that by the previous proof, we consider:
  <br><br>
  $$||(\textbf{x} \ - \ \textbf{y})|| \ + \ ||(\textbf{y} \ - \ \textbf{z})|| \ \geq \ ||(\textbf{x} \ - \ \textbf{y}) \ + \ (\textbf{y} \ - \ \textbf{z})|| \ = \ ||\textbf{x} \ - \ \textbf{z}||$$
  <br>
