--- a/munkres/17/19.html
+++ b/munkres/17/19.html
@@ -66,7 +66,7 @@ $$\bar{U} \ - \ \text{Int} \ U \ = \ \bar{U} \ - \ U \ \Rightarrow \ \text{Int} 
 <br>
 This is only true when $U$ is open, therefore we have completed the proof.
 <br><br>
-We are finally asked to consider, when $U$ is open, if the relationship holds: $U \ = \ \text{Int}(\bar{U}). This is not necessarily true, as there could be some open set that lies $\bar{U}$ that does not
+We are finally asked to consider, when $U$ is open, if the relationship holds: $U \ = \ \text{Int}(\bar{U})$. This is not necessarily true, as there could be some open set that lies $\bar{U}$ that does not
 lie in $U$. I can't think of an example of this right now, but I'll update this solution once I do.
 </p>
 </div>
