--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <p>If you share any of these interests, please feel free to reach out! If you don't share these interests, also feel free to reach out! I'm always looking for new interesting friends/academic colleagues!</p>
     <br>
     <h4>I sometimes write stuff online!</h4>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a> | <a href="https://lucaman99.github.io/blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a></p>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://medium.com/@jackceroni">Medium</a> | <a href="https://www.linkedin.com/in/jack-ceroni-687ab5154/">Linkedin</a> | <a href="https://lucaman99.github.io/blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> </p>
     <p>Send me an email! <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     <br><br><br>
     <h3>Current Projects</h3>
