--- a/qm/index.html
+++ b/qm/index.html
@@ -20,11 +20,7 @@
 <p>Chapter 1: <a href="https://lucaman99.github.io/qm/1/4.html">Problem 1.4</a>, <a href="https://lucaman99.github.io/qm/1/7.html">Problem 1.7</a>, <a href="https://lucaman99.github.io/qm/1/11.html">Problem 1.11</a>, <a href="https://lucaman99.github.io/qm/1/14.html">Problem 1.14</a>, <a href="https://lucaman99.github.io/qm/1/15.html">Problem 1.15</a>, <a href="https://lucaman99.github.io/qm/1/16.html">Problem 1.16</a></p>
 <p>Chapter 2: <a href="https://lucaman99.github.io/qm/2/14.html">Problem 2.14</a>, <a href="https://lucaman99.github.io/qm/2/22.html">Problem 2.22</a>, <a href="https://lucaman99.github.io/qm/2/29.html">Problem 2.29</a>, <a href="https://lucaman99.github.io/qm/2/40.html">Problem 2.40</a></p>
 <p>Chapter 3: <a href="https://lucaman99.github.io/qm/3/11.html">Problem 3.11</a>, <a href="https://lucaman99.github.io/qm/3/13.html">Problem 3.13</a>, <a href="https://lucaman99.github.io/qm/3/14.html">Problem 3.14</a>, <a href="https://lucaman99.github.io/qm/3/15.html">Problem 3.15</a>, <a href="https://lucaman99.github.io/qm/3/16.html">Problem 3.16</a>, <a href="https://lucaman99.github.io/qm/3/33.html">Problem 3.33</a>, <a href="https://lucaman99.github.io/qm/3/35.html">Problem 3.35</a></p>
-<<<<<<< HEAD
-<p>Chapter 4: <a href="https://lucaman99.github.io/qm/4/1.html">Problem 4.1</a>, <a href="https://lucaman99.github.io/qm/4/14.html">Problem 4.14</a>, <a href="https://lucaman99.github.io/qm/4/17.html">Problem 4.17</a>, <a href="https://lucaman99.github.io/qm/4/24.html">Problem 4.24</a></p>
-=======
-<p>Chapter 4: <a href="https://lucaman99.github.io/qm/4/1.html">Problem 4.1</a>, <a href="https://lucaman99.github.io/qm/4/14.html">Problem 4.14</a>, <a href="https://lucaman99.github.io/qm/4/17.html">Problem 4.17</a>, <a href="https://lucaman99.github.io/qm/4/24.html">Problem 4.24</a>, <a href="https://lucaman99.github.io/qm/4/33.html">Problem 4.33</a>, <a href="https://lucaman99.github.io/qm/4/39.html">Problem 4.39</a></p>
->>>>>>> 88cc3104f7bb443346e7c6a4a76e83eacae47c3a
+<p>Chapter 4: <a href="https://lucaman99.github.io/qm/4/1.html">Problem 4.1</a>, <a href="https://lucaman99.github.io/qm/4/14.html">Problem 4.14</a>, <a href="https://lucaman99.github.io/qm/4/17.html">Problem 4.17</a>, <a href="https://lucaman99.github.io/qm/4/24.html">Problem 4.24</a>, <a href="https://lucaman99.github.io/qm/4/33.html">Problem 4.33</a></p>
 </div>
 </center>
 <img src="coherent.png" style="height:400px;width:400px;right:-1px;position:fixed;bottom:0px;">
